Add in new being enough hero

--- a/src/site/being-enough.njk
+++ b/src/site/being-enough.njk
@@ -6,15 +6,20 @@ metaDescription: 'A 6 week LIVE coaching journey where we will cover the absolut
 
 ---
 
-    <!-- Parralex hero section -->
-    <section class="testimonial-hero-container cc-workshop-hero">
-        <div class="parallax-container contact-hero-parallax-window"></div>
-        <div class="right-hero-text">
-            <h1 class="sect-title">Being Enough - the 6 week program</h1>
-            <h2 class="sect-subtitle">With Mhairi Todd</h2>
+    <!-- hero section -->
+    <section class="home-hero container-fluid p-0">
+        <div class="home-hero-img hero-showing">
+            <img src="/static/img/Mhairi_pics/home_hero_comp.jpg" alt="mhairi-life-coach-in-black-coat">
+        </div>
+        <div class="home-hero-img">
+            <img src="/static/img/Mhairi_pics/home_hero_2_comp.jpg" class="home-hero-2" alt="mhairi-life-coach-walking-towards">
+        </div>
+        <div class="home-hero-text">
+            <p class="hero-text first-hero-text" data-aos="fade-right" data-aos-delay="200" data-aos-duration="1500">Being Enough</p>
+            <p class="hero-text second-hero-text" data-aos="fade-left" data-aos-delay="300" data-aos-offset="100" data-aos-duration="1500">The 6 week program</p>
         </div>
     </section>
-    <!-- END: parralex hero section -->
+    <!-- END: hero section -->
 
     <!-- intro section -->
     <section class="services-intro testimonial-intro you-will-gain-section">
@@ -68,7 +73,6 @@ metaDescription: 'A 6 week LIVE coaching journey where we will cover the absolut
     <!-- END: what is it section -->
 
     <!-- our journey section -->
-    <!-- how it works -->
     <section class="our-journey">
         <h2 class="sect-title our-journey-title">
             Our Journey - What we will cover
@@ -179,63 +183,60 @@ metaDescription: 'A 6 week LIVE coaching journey where we will cover the absolut
     </section>
     <!-- END: parralex testimonial section -->
 
-    <hr class="half-width-hr mt-0">
-
     <!-- Who is it for section -->
-    <section class="home-about who-is-it-for">
-        <div class="home-about-title">
-            <h1 class="sect-title">Who it is for</h1>
-        </div>
-        <div class="who-is-it-for-img">
-            <img src="../static/img/Mhairi_pics/laughing-comp.jpg" alt="mhairi-life-coach-walking-away">
-        </div>
-        <div class="home-about-text">
-            <p class="normal-text">
-                Incredible women just like you from any and all backgrounds. This will be a safe, respectful and inclusive space. 
-            </p>
-            <p class="normal-text">
-                So even if you have ‘the fear’, even if you have confidence wobbles and even if you have felt this way for a very long time, I’ve got you.
-            </p>
-            <p class="normal-text">
-                *Over 18’s only my loves
-            </p>
+    <section class="who-is-it-for-section">
+        <h2 class="sect-title text-center">
+            The details
+        </h2>
+        <div class="home-about who-is-it-for">
+            <div class="who-is-it-for-img">
+                <img src="../static/img/Mhairi_pics/laughing-comp.jpg" alt="mhairi-life-coach-walking-away">
+            </div>
+            <div class="home-about-text">
+                <div class="when-how-item">
+                    <span class="home-about-subtitle pink-text">Who? </span>
+                    <p class="normal-text">
+                    Incredible women just like you from any and all backgrounds. This will be a safe, respectful and inclusive space. 
+                    </p>
+                    <p class="normal-text">
+                        So even if you have ‘the fear’, even if you have confidence wobbles and even if you have felt this way for a very long time, I’ve got you.
+                    </p>
+                    <p class="normal-text">
+                        *Over 18’s only my loves
+                    </p>
+                </div>
+                <div class="when-how-item">
+                    <span class="home-about-subtitle pink-text">When? </span>
+                    <p class="normal-text">Kickstart opening ritual on Sunday 2nd May 8pm. There after every Wednesday evening at 8pm LIVE.</p>
+                    <p class="normal-text">We will spend a delightful 6 weeks together!</p>
+                </div>
+            </div>
         </div>
     </section>
     <!-- END: Who is it for section -->
 
     <!-- when, how long and how section -->
-    <section class="why-mhairi">
+    <section class="why-mhairi when-how">
         <div class="why-mhairi-content when-how-content">
-            <div class="why-mhairi-title">
-                <h2 class="sect-title">
-                    How long, when and how?
-                </h2>
-            </div>
             <div class="home-about-img">
                 <img src="/static/img/Mhairi_pics/sitting_yellow_coat_comp.jpg" alt="mhairi-life-coach-yellow-coat">
             </div>
             <div class="home-about-text">
                 <div class="when-how-item">
-                    <span class="home-about-subtitle pink-text">How long? </span><p class="normal-text">We will spend a delightful 6 weeks together</p>
-                </div>
-                <div class="when-how-item">
-                    <span class="home-about-subtitle pink-text">When? </span><p class="normal-text">Kickstart opening ritual on Sunday 2nd May 8pm. There after every Wednesday evening at 8pm LIVE.</p>
-                </div>
-                <div class="when-how-item">
                     <span class="home-about-subtitle pink-text">How? </span><p class="normal-text">The weeks will alternate between:</p>
                     <ul class="workshop-includes-list normal-text">
                         <li class="workshop-includes-item">
                             <i class="far fa-check-circle"></i>
-                            <span class="workshop-includes-item-text">a live coaching module delivered by me for you to digest and implement.</span>
+                            <span class="workshop-includes-item-text">A live coaching module delivered by me for you to digest and implement.</span>
                         </li>
                         <li class="workshop-includes-item">
                             <i class="far fa-check-circle"></i>
-                            <span class="workshop-includes-item-text">a live follow up session for us to review insights, support each other and address specific questions.</span>
+                            <span class="workshop-includes-item-text">A live follow up session for us to review insights, support each other and address specific questions.</span>
                         </li>
                     </ul>
                 </div>
                 <div class="when-how-item">
-                    <span class="home-about-subtitle pink-text">Extras</span>
+                    <span class="home-about-subtitle pink-text">Psst..</span>
                     <p class="normal-text">
                         Can’t make a live session?  No worries. All sessions will be recorded and emailed out the following day so you can dip in and out as you need to. 
                     </p>
@@ -250,6 +251,8 @@ metaDescription: 'A 6 week LIVE coaching journey where we will cover the absolut
         </div>
     </section>
     <!-- END: when, how long and how section -->
+
+    <hr class="half-width-hr d-md-none">
 
     <!-- added value section -->
     <section class="known-for added-value">
@@ -279,4 +282,32 @@ metaDescription: 'A 6 week LIVE coaching journey where we will cover the absolut
     </section>
 
     <!-- END: added value section -->
+
+    <!-- payments options -->
+    <section class="payment-options">
+        <h2 class="sect-title how-title">
+            The Investment Options
+        </h2>
+        <div class="payment-options-content">
+            <div class="payment-options-item">
+                <h3 class="sect-subtitle">One-time payment</h3>
+                <div class="payment-figure">
+                    <p class="normal-text payment-figure-content fw-b">
+                        £225 <br>
+                        One time payment
+                    </p>
+                </div>
+                <p class="normal-text">
+                    Before we start getting deep into the change, we use a personality profiling tool called DISC, which is recognised worldwide as a powerful tool to accelerate personal growth. We then review your fears, motivators and drivers, before we address what
+                </p>
+            </div>
+            <div class="payment-options-item">
+                <h3 class="sect-subtitle">Payment plan</h3>
+                <p class="normal-text">
+                    Then the fun really begins. Our coaching sessions will be structured in a fun, familiar way, and most importantly, be centred around you. We work with your conscious and subconscious to set your gut-informed goals and stick to them. We uncover and build your bespoke strategy for success and arm you with the tools to put them into practice. Finally, you can start living the life you’ve imagined.
+                </p>
+            </div>    
+        </div>
+    </section>
+    <!-- END: payment options -->
 
