Add payment options

--- a/src/site/being-enough.njk
+++ b/src/site/being-enough.njk
@@ -290,7 +290,7 @@ metaDescription: 'A 6 week LIVE coaching journey where we will cover the absolut
         </h2>
         <div class="payment-options-content">
             <div class="payment-options-item">
-                <h3 class="sect-subtitle">One-time payment</h3>
+                <h3 class="sect-subtitle fw-b">One-time payment</h3>
                 <div class="payment-figure">
                     <p class="normal-text payment-figure-content fw-b">
                         £225 <br>
@@ -298,11 +298,18 @@ metaDescription: 'A 6 week LIVE coaching journey where we will cover the absolut
                     </p>
                 </div>
                 <p class="normal-text">
-                    Before we start getting deep into the change, we use a personality profiling tool called DISC, which is recognised worldwide as a powerful tool to accelerate personal growth. We then review your fears, motivators and drivers, before we address what
+                    Payment will be processed with GoCardless. It will be a one-time direct debit payment.
                 </p>
+                <a class="btn-dark-pink sign-me-up-btn" href="">Sign me up!</a>
             </div>
             <div class="payment-options-item">
-                <h3 class="sect-subtitle">Payment plan</h3>
+                <h3 class="sect-subtitle fw-b">Payment plan</h3>
+                <div class="payment-figure">
+                    <p class="normal-text payment-figure-content bg-pink fw-b">
+                        Spread the cost<br>
+                        Options below
+                    </p>
+                </div>
                 <p class="normal-text">
                     Then the fun really begins. Our coaching sessions will be structured in a fun, familiar way, and most importantly, be centred around you. We work with your conscious and subconscious to set your gut-informed goals and stick to them. We uncover and build your bespoke strategy for success and arm you with the tools to put them into practice. Finally, you can start living the life you’ve imagined.
                 </p>
