Add payment option radio boxes

--- a/src/site/being-enough.njk
+++ b/src/site/being-enough.njk
@@ -288,31 +288,47 @@ metaDescription: 'A 6 week LIVE coaching journey where we will cover the absolut
         <h2 class="sect-title how-title">
             The Investment Options
         </h2>
+        <div class="simple-section-text">
+            <p class="normal-text">
+                The program costs £225.  You can choose from several direct debit payment options to best suit you.  The first payment will be on 1st May and each month thereafter until the total is paid. 
+            </p>
+            <p class="normal-text">
+                Payments are processed with <a href="https://gocardless.com/" target="_blank">GoCardless</a>. Clicking on an option below will take you to the GoCardless registration page where you will complete a registration form.
+            </p>
+        </div>
         <div class="payment-options-content">
             <div class="payment-options-item">
-                <h3 class="sect-subtitle fw-b">One-time payment</h3>
+                <h3 class="sect-subtitle fw-b">Payment plans</h3>
                 <div class="payment-figure">
-                    <p class="normal-text payment-figure-content fw-b">
-                        £225 <br>
-                        One time payment
-                    </p>
+                    <div class="payment-figure-content bg-blue fw-b">
+                        <p class="sect-subtitle m-0">£225</p>
+                        <p class="normal-text m-0">Payment options below</p>
+                    </div>
                 </div>
-                <p class="normal-text">
-                    Payment will be processed with GoCardless. It will be a one-time direct debit payment.
-                </p>
-                <a class="btn-dark-pink sign-me-up-btn" href="">Sign me up!</a>
-            </div>
-            <div class="payment-options-item">
-                <h3 class="sect-subtitle fw-b">Payment plan</h3>
-                <div class="payment-figure">
-                    <p class="normal-text payment-figure-content bg-pink fw-b">
-                        Spread the cost<br>
-                        Options below
-                    </p>
-                </div>
-                <p class="normal-text">
-                    Then the fun really begins. Our coaching sessions will be structured in a fun, familiar way, and most importantly, be centred around you. We work with your conscious and subconscious to set your gut-informed goals and stick to them. We uncover and build your bespoke strategy for success and arm you with the tools to put them into practice. Finally, you can start living the life you’ve imagined.
-                </p>
+                <form class="form">
+                    <div class="inputGroup">
+                        <input id="radio1" name="radio" type="radio"/>
+                        <label class="normal-text" for="radio1">1 payment of £225</label>
+                    </div>
+                    <div class="inputGroup">
+                        <input id="radio2" name="radio" type="radio"/>
+                        <label class="normal-text" for="radio2">2 payments of £112.50</label>
+                    </div>
+                    <div class="inputGroup">
+                        <input id="radio3" name="radio" type="radio"/>
+                        <label class="normal-text" for="radio3">3 payments of £75</label>
+                    </div>
+                    <div class="inputGroup">
+                        <input id="radio4" name="radio" type="radio"/>
+                        <label class="normal-text" for="radio4">4 payments of £56.25</label>
+                    </div>
+                    <div class="inputGroup">
+                        <input id="radio5" name="radio" type="radio"/>
+                        <label class="normal-text" for="radio5">5 payments of £45</label>
+                    </div>
+                    <a class="btn-dark-pink sign-me-up-btn bg-blue" href="">Book your spot!</a>
+                </form>
+                <p class="payment-small-text">*Payments by GoCardless. Read the <a href="https://gocardless.com/privacy" target="_blank">GoCardless privacy notice</a></p>
             </div>    
         </div>
     </section>
