--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2475,7 +2475,7 @@ a:focus {
   text-transform: uppercase;
   color: #3b403f;
   font-size: 1.18em;
-  padding: .5em 1em;
+  padding: .1em 1em;
   letter-spacing: .2em;
   -webkit-box-shadow: 3px 5px 9px -7px #3b403f;
           box-shadow: 3px 5px 9px -7px #3b403f;
@@ -2484,7 +2484,7 @@ a:focus {
   bottom: 0;
   position: relative;
   display: inline-block;
-  margin: auto;
+  margin: 2em auto;
 }
 
 @media only screen and (min-width: 500px) and (max-width: 767px) {
@@ -2496,27 +2496,28 @@ a:focus {
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .sign-me-up-btn {
     font-size: .8em;
-    padding: .55em .8em;
+    padding: .1em .8em;
   }
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
   .sign-me-up-btn {
     font-size: .8em;
-    padding: .20em .9em;
+    padding: .1em .9em;
   }
 }
 
 @media only screen and (min-width: 1200px) {
   .sign-me-up-btn {
     font-size: .7em;
+    padding: .1em .8em;
   }
 }
 
 @media only screen and (min-width: 1600px) {
   .sign-me-up-btn {
     font-size: .6em;
-    padding: .6em .6em;
+    padding: .1em .8em;
   }
 }
 
@@ -13665,39 +13666,39 @@ input[type='checkbox'] {
   .payment-options-content {
     display: -ms-grid;
     display: grid;
-    height: 24em;
+    height: 34em;
   }
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px), only screen and (min-width: 992px) and (max-width: 1199px), only screen and (min-width: 1200px), only screen and (min-width: 1600px) {
   .payment-options-content {
     margin: 2em 0 3em 0;
-    -ms-grid-columns: auto 17em 3em 17em auto;
-        grid-template-columns: auto 17em 3em 17em auto;
+    -ms-grid-columns: auto 17em auto;
+        grid-template-columns: auto 17em auto;
   }
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
   .payment-options-content {
-    height: 22em;
-    -ms-grid-columns: auto 14em 4em 14em auto;
-        grid-template-columns: auto 14em 4em 14em auto;
+    height: 31em;
+    -ms-grid-columns: auto 18em auto;
+        grid-template-columns: auto 18em auto;
   }
 }
 
 @media only screen and (min-width: 1200px) {
   .payment-options-content {
-    height: 19em;
-    -ms-grid-columns: auto 14em 4em 14em auto;
-        grid-template-columns: auto 14em 4em 14em auto;
+    height: 27em;
+    -ms-grid-columns: auto 18em auto;
+        grid-template-columns: auto 18em auto;
   }
 }
 
 @media only screen and (min-width: 1600px) {
   .payment-options-content {
-    height: 17em;
-    -ms-grid-columns: auto 13em 4em 13em auto;
-        grid-template-columns: auto 13em 4em 13em auto;
+    height: 23em;
+    -ms-grid-columns: auto 17em auto;
+        grid-template-columns: auto 17em auto;
   }
 }
 
@@ -13706,12 +13707,12 @@ input[type='checkbox'] {
   margin: 4em 1.5em;
   height: auto;
   width: 90vw;
-  padding: 2em 2em;
+  padding: 2em 1em;
 }
 
 .payment-options-item:nth-child(1) {
   margin: 2em 1.5em;
-  background-color: rgba(197, 219, 206, 0.2);
+  background-color: rgba(104, 152, 165, 0.2);
 }
 
 @media only screen and (min-width: 500px) and (max-width: 767px) {
@@ -13721,7 +13722,7 @@ input[type='checkbox'] {
 }
 
 .payment-options-item:nth-child(2) {
-  background-color: rgba(211, 139, 135, 0.2);
+  background-color: rgba(104, 152, 165, 0.2);
 }
 
 @media only screen and (min-width: 500px) and (max-width: 767px) {
@@ -13741,12 +13742,12 @@ input[type='checkbox'] {
     -ms-grid-column: 2;
     grid-column: 2;
     margin: 0;
-    background-color: rgba(197, 219, 206, 0.2);
+    background-color: rgba(104, 152, 165, 0.2);
   }
   .payment-options-item:nth-child(2) {
     -ms-grid-column: 4;
     grid-column: 4;
-    background-color: rgba(211, 139, 135, 0.2);
+    background-color: rgba(104, 152, 165, 0.2);
   }
 }
 
@@ -13772,14 +13773,30 @@ input[type='checkbox'] {
   position: relative;
   width: 18em;
   height: 6em;
-  margin: auto;
+  margin: 2em auto;
 }
 
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 768px) and (max-width: 991px) {
   .payment-figure {
     width: 70%;
     height: 4em;
     margin-bottom: 2em;
+  }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .payment-figure {
+    margin: 1em auto;
+    width: 70%;
+    height: 4em;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .payment-figure {
+    margin: 1em auto;
+    width: 70%;
+    height: 4em;
   }
 }
 
@@ -13788,8 +13805,11 @@ input[type='checkbox'] {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   right: 0;
-  background-color: #9ec6b3;
   bottom: 0;
   left: 0;
   top: 0;
@@ -13805,7 +13825,170 @@ input[type='checkbox'] {
   margin-bottom: 0;
 }
 
-.bg-pink {
-  background-color: #ecc6b6;
+.bg-green {
+  background-color: #9ec6b3;
+}
+
+.bg-blue {
+  background-color: rgba(104, 152, 165, 0.5);
+}
+
+.inputGroup {
+  background-color: #fff;
+  border-radius: 5px;
+  display: block;
+  margin: 10px 0;
+  position: relative;
+}
+
+.inputGroup label {
+  padding: .2em 1em;
+  width: 100%;
+  display: block;
+  text-align: left;
+  color: #3C454C;
+  cursor: pointer;
+  position: relative;
+  z-index: 2;
+  -webkit-transition: color 200ms ease-in;
+  transition: color 200ms ease-in;
+  overflow: hidden;
+}
+
+.inputGroup label:before {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  content: '';
+  background-color: #5562eb;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%) scale3d(1, 1, 1);
+          transform: translate(-50%, -50%) scale3d(1, 1, 1);
+  -webkit-transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: all 300ms cubic-bezier(0.4, 0, 0.2, 1);
+  opacity: 0;
+  z-index: -1;
+}
+
+.inputGroup label:after {
+  width: 25px;
+  height: 25px;
+  content: '';
+  border: 2px solid #D1D7DC;
+  background-color: #fff;
+  background-image: url("data:image/svg+xml,%3Csvg width='32' height='32' viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5.414 11L4 12.414l5.414 5.414L20.828 6.414 19.414 5l-10 10z' fill='%23fff' fill-rule='nonzero'/%3E%3C/svg%3E ");
+  background-repeat: no-repeat;
+  background-position: -2px 0px;
+  border-radius: 50%;
+  z-index: 2;
+  position: absolute;
+  right: 1em;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  cursor: pointer;
+  -webkit-transition: all 200ms ease-in;
+  transition: all 200ms ease-in;
+}
+
+.inputGroup input:checked ~ label {
+  color: #fff;
+}
+
+.inputGroup input:checked ~ label:before {
+  -webkit-transform: translate(-50%, -50%) scale3d(56, 56, 1);
+          transform: translate(-50%, -50%) scale3d(56, 56, 1);
+  opacity: 1;
+}
+
+.inputGroup input:checked ~ label:after {
+  background-color: #54E0C7;
+  border-color: #54E0C7;
+}
+
+.inputGroup input {
+  width: 32px;
+  height: 32px;
+  -webkit-box-ordinal-group: 2;
+      -ms-flex-order: 1;
+          order: 1;
+  z-index: 2;
+  position: absolute;
+  right: 30px;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  cursor: pointer;
+  visibility: hidden;
+}
+
+.form {
+  padding: 0 16px;
+  width: 21em;
+  margin: 3em auto 0em auto;
+  line-height: 36px;
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .form {
+    width: 16em;
+    margin: 2em auto 0em auto;
+  }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .form {
+    width: 15em;
+    margin: 2em auto 0em auto;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .form {
+    width: 14em;
+    margin: 2em auto 0em auto;
+  }
+}
+
+@media only screen and (min-width: 1600px) {
+  .form {
+    font-size: .6em;
+  }
+}
+
+.payment-small-text {
+  font-size: 1em;
+}
+
+@media only screen and (min-width: 500px) and (max-width: 767px) {
+  .payment-small-text {
+    font-size: 1em;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .payment-small-text {
+    font-size: .7em;
+  }
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .payment-small-text {
+    font-size: .6em;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .payment-small-text {
+    font-size: .5em;
+  }
+}
+
+@media only screen and (min-width: 1600px) {
+  .payment-small-text {
+    font-size: .4em;
+  }
 }
 /*# sourceMappingURL=main.css.map */
