--- a/static/scss/components/_button.scss
+++ b/static/scss/components/_button.scss
@@ -225,7 +225,7 @@ a:focus{outline:0;}
     text-transform: uppercase;
     color: $base-text-color;
     font-size: 1.18em;
-    padding: .5em 1em;
+    padding: .1em 1em;
     letter-spacing: .2em;
     box-shadow: 3px 5px 9px -7px #3b403f;
     left: 0;
@@ -233,24 +233,25 @@ a:focus{outline:0;}
     bottom: 0;
     position: relative;
     display: inline-block;
-    margin: auto;
+    margin: 2em auto;
     @media #{$breakpoint-sm} {
         font-size: 1em;
     }
     @media #{$breakpoint-md} {
         font-size: .8em;
-        padding: .55em .8em;
+        padding: .1em .8em;
     }
     @media #{$breakpoint-lg} {
         font-size: .8em;
-        padding: .20em .9em;
+        padding: .1em .9em;
     }
     @media #{$breakpoint-xl} {
         font-size: .7em;
+        padding: .1em .8em;
     }
     @media #{$breakpoint-xxl} {
         font-size: .6em;
-        padding: .6em .6em;
+        padding: .1em .8em;
     }
     &:hover{
         cursor: pointer;
